# router/sysrouter.go
@@ -72,6 +72,7 @@ func registerBaseRouter(v1 *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddlewar
 	v1auth := v1.Group("").Use(authMiddleware.MiddlewareFunc()).Use(middleware.AuthCheckRole())
 	{
 		v1auth.GET("/info", system.Info)
+		v1auth.GET("/menurole", system.MenuRole)
 		v1auth.POST("/logout", handler.Logout)
 		v1auth.GET("/role", system.GetRole)
 	}
